clear button and rgba colors and some ui added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Etch_A_Sketch</title>
 </head>
 <body>
+
+    <h2>Size 16X16</h2>
     <div class="container">
+    </div>
+    <div class="buttons">
+        <button id="clear-button" onclick="clearColors()">Clear</button>
     </div>
     <script src='main.js'></script>
 </body>
